secondfile/objects/GrowSections__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Grow_AdditionalBusPlan__c</fullName>
        <label>Grow_AdditionalBusPlan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_CoBranding__c</fullName>
        <label>Grow CoBranding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Event__c</fullName>
        <label>Grow Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Guides__c</fullName>
        <label>Grow_Guides</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_IDF__c</fullName>
        <label>Grow IDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_MDF__c</fullName>
        <label>Grow MDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_MaaS__c</fullName>
        <label>Grow MaaS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Order__c</fullName>
        <label>Grow Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Prospecting__c</fullName>
        <label>Grow Prospecting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_SharedVue__c</fullName>
        <label>Grow_SharedVue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_BrandGuide__c</fullName>
        <label>MR_BrandGuide</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_MediaPRGuide__c</fullName>
        <label>MR_MediaPRGuide</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Enable__c</fullName>
        <label>Sales_Enable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GrowSections</label>
</CustomObject>